# facial-landmarks-for-cubism

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE-MIT.txt  README.md  block_diagram.drawio  build.sh  config.txt
example/: build.sh  demo.patch  demo_win.patch  generate_patch.sh  upgrade.sh
include/: facial_landmark_detector.h
src/: facial_landmark_detector.cpp  math_utils.h
