cmake_minimum_required(VERSION 3.16)

project(FacialLandmarksForCubism_project)

add_library(FacialLandmarksForCubism STATIC src/facial_landmark_detector.cpp)
set_target_properties(FacialLandmarksForCubism PROPERTIES PUBLIC_HEADER include/facial_landmark_detector.h)

target_include_directories(FacialLandmarksForCubism PRIVATE include)
target_link_libraries(FacialLandmarksForCubism)

